Config file for new machine

--- a/data/cfg/voyager.properties
+++ b/data/cfg/voyager.properties
@@ -1,6 +1,5 @@
 CPU_INTENSIVE_THREADS=2
 USE_AFFINITY=false
-SAFETY_MARGIN=3300
+SAFETY_MARGIN=1000
 WC_LOCATION=C:/Personal/Projects/GGP/ggp-base
-USE_LOCAL_SEARCH=false
-CREATING_DATABASE=true
+CREATING_DATABASE=false
